tests/neg/implicit-arg.scala
class C

def foo(using C) = ()

def Test =
  val c = C()
  foo(c)
